Create DELETE routes for suggestions and generic words
